# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml
brain_games/: cli.py  engine.py
brain_games/game_logic/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain-even.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
