[tool.poetry]
name = "nakisev92_brain_games"
version = "0.1.0"
description = "This first project"
authors = ["Nikita Kiselev <nakisele92@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
