[tool.poetry]
name = "nakiselev92_brain_games"
version = "0.1.2"
description = "This first project"
authors = ["Nikita Kiselev <nakisele92@gmail.com>"]
packages = [
  { include = "brain_games" },
]


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
